--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
-node_modules
-config.json
+/index.js
+/config.json
+/bower_components/
+/node_modules/
+/.pulp-cache/
+/output/
+/.psci*
+/src/.webpack.js
