--- a/bower.json
+++ b/bower.json
@@ -11,8 +11,7 @@
     "output"
   ],
   "dependencies": {
-    "purescript-console": "^0.1.0",
-    "purescript-aff": "^0.16.1",
-    "purescript-node-fs-aff": "^0.6.0"
+    "purescript-prelude": "^1.0.1",
+    "purescript-aff": "^0.17.0"
   }
 }
