--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
   ],
   "dependencies": {
     "purescript-prelude": "^1.0.1",
-    "purescript-aff": "^1.1.0"
+    "purescript-aff": "^1.1.0",
+    "purescript-observable": "^2.2.0"
   }
 }
