--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "purescript-prelude": "^1.0.1",
     "purescript-aff": "^1.1.0",
-    "purescript-observable": "^2.2.0"
+    "purescript-observable": "^2.2.0",
+    "purescript-observable-lift": "^0.1.0"
   }
 }
