--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "purescript-aff": "^1.1.0",
     "purescript-observable": "^2.2.0",
     "purescript-observable-lift": "^0.1.0",
-    "purescript-xstream": "^0.3.0"
+    "purescript-xstream": "^0.3.0",
+    "purescript-node-fs-aff": "^2.0.0"
   }
 }
