use purescript-node-telegram-bot-api and remove all local FFI

--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "purescript-node-fs-aff": "^2.0.0",
     "purescript-foreign": "^1.1.0",
     "purescript-node-child-process": "^2.0.0",
-    "purescript-refs": "^1.0.0"
+    "purescript-refs": "^1.0.0",
+    "purescript-node-telegram-bot-api": "^0.1.0"
   }
 }
