--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,8 @@
   ],
   "dependencies": {
     "purescript-xstream": "^0.5.0",
-    "purescript-node-telegram-bot-api": "^0.2.0"
+    "purescript-node-telegram-bot-api": "^0.3.0",
+    "purescript-foreign": "^3.0.0",
+    "purescript-node-child-process": "^3.0.0"
   }
 }
