--- a/bower.json
+++ b/bower.json
@@ -11,9 +11,11 @@
     "output"
   ],
   "dependencies": {
-    "purescript-xstream": "^0.5.0",
+    "purescript-xstream": "^0.6.1",
     "purescript-node-telegram-bot-api": "^0.3.0",
-    "purescript-foreign": "^3.0.0",
-    "purescript-node-child-process": "^3.0.0"
+    "purescript-foreign": "^3.0.1",
+    "purescript-node-child-process": "^3.0.0",
+    "purescript-foreign-generic": "^3.0.0",
+    "purescript-generics-rep": "^4.0.0"
   }
 }
