--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@cycle/run": "^3.1.0",
     "node-telegram-bot-api": "^0.25.0",
     "xstream": "^9.3.0"
   }
