--- a/bower.json
+++ b/bower.json
@@ -11,11 +11,10 @@
     "output"
   ],
   "dependencies": {
-    "purescript-xstream": "^0.9.0",
-    "purescript-foreign": "^4.0.0",
     "purescript-node-child-process": "^4.0.0",
-    "purescript-generics-rep": "^5.0.0",
-    "purescript-cycle-run": "^0.7.0",
-    "purescript-node-telegram-bot-api": "57e0ca7"
+    "purescript-node-telegram-bot-api": "^0.6.0",
+    "purescript-choco-pie": "^0.1.0",
+    "purescript-simple-json": "^0.4.0",
+    "purescript-io": "^4.0.0"
   }
 }
