--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@cycle/run": "^3.1.0",
-    "node-telegram-bot-api": "^0.27.1",
-    "xstream": "^10.8.0"
+    "node-telegram-bot-api": "^0.27.1"
   }
 }
