--- a/bower.json
+++ b/bower.json
@@ -12,9 +12,10 @@
   ],
   "dependencies": {
     "purescript-node-child-process": "^4.0.0",
-    "purescript-node-telegram-bot-api": "^0.6.0",
     "purescript-choco-pie": "^0.2.0",
-    "purescript-simple-json": "^0.4.0",
-    "purescript-io": "^4.0.0"
+    "purescript-simple-json": "^0.5.0",
+    "purescript-io": "^4.0.0",
+    "purescript-node-telegram-bot-api": "1.0.0",
+    "purescript-node-fs-aff": "^4.0.0"
   }
 }
